[gd_scene load_steps=14 format=3 uid="uid://ch5nxi1lsuyys"]

[ext_resource type="Script" path="res://Modules/Hero/Hero.gd" id="1_kisl0"]
[ext_resource type="Script" path="res://Resources/Stats/HeroStats.gd" id="2_dap1s"]
[ext_resource type="Texture2D" uid="uid://d0djxrvf6ae2k" path="res://Art Assets/SciFiCreatures_NES_4x30_alphaBG.png" id="3_mmrct"]
[ext_resource type="Script" path="res://Modules/Hero/StateMachine/StateMachine.gd" id="4_3ogni"]
[ext_resource type="Script" path="res://Modules/Hero/FindGoal.gd" id="5_4iy8r"]
[ext_resource type="Script" path="res://Modules/Hero/FightEnemies.gd" id="6_uoo35"]
[ext_resource type="Script" path="res://Modules/Hero/Wander.gd" id="7_nmssn"]

[sub_resource type="Resource" id="Resource_kfx02"]
script = ExtResource("2_dap1s")
ACCEL = 250
MAX_SPEED = 100
FRIC = 400

[sub_resource type="AtlasTexture" id="AtlasTexture_rsbdf"]
atlas = ExtResource("3_mmrct")
region = Rect2(0, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mqo0y"]
atlas = ExtResource("3_mmrct")
region = Rect2(32, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dud72"]
atlas = ExtResource("3_mmrct")
region = Rect2(64, 288, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_cw4na"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rsbdf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mqo0y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dud72")
}],
"loop": true,
"name": &"default",
"speed": 4.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_g7sym"]
radius = 11.0
height = 32.0

[node name="Hero" type="CharacterBody2D"]
collision_layer = 7
script = ExtResource("1_kisl0")
hero_stats = SubResource("Resource_kfx02")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_cw4na")
autoplay = "default"
frame_progress = 0.950746

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_g7sym")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
debug_enabled = true

[node name="ResetNav" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("4_3ogni")
initial_state = NodePath("FindGoal")

[node name="FindGoal" type="Node" parent="StateMachine"]
script = ExtResource("5_4iy8r")

[node name="FightEnemies" type="Node" parent="StateMachine"]
script = ExtResource("6_uoo35")

[node name="Wander" type="Node" parent="StateMachine"]
script = ExtResource("7_nmssn")

[connection signal="timeout" from="ResetNav" to="StateMachine/FindGoal" method="_on_reset_nav_timeout"]
